# 03_to_cloud_batelecom

./: README.md  build.sh  pyproject.toml  render.yaml
batelecom/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
batelecom/b_tel_express/: apps.py  urls.py
batelecom/b_tel_express/my_b_tel_express/: acc_views.py  views.py
batelecom/b_tel_express/templates/: b_tel_express_index.html  base_all.html
batelecom/b_tel_express/templates/my_acc/: profile.html
batelecom/b_tel_express/templates/my_services/: manage_accounts_list.html  package_info.html  packages_list.html  sabafon_list.html
batelecom/b_tel_express/templates/registration/: logged_out.html  login.html
batelecom/batelecom/: asgi.py  settings.py  urls.py  wsgi.py
