[tool.poetry]
name = "03-to-cloud-batelecom"
version = "0.1.0"
description = "salah test 06"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "03_to_cloud_batelecom"}]

[tool.poetry.dependencies]
python = "^3.7"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
django = "^3.0.14"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
python = "^3.7"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
django = "^3.0.14"
requests = "^2.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
