[tool.poetry]
name = "03_to_cloud_batelecom"
version = "0.1.0"
description = "salah test 07"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.10"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
django = "^3.0.14"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]
python = "^3.7.10"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
django = "^3.0.14"
requests = "^2.30.0"

[build-system]
requires = ["poetry-core>=1.1.12"]
build-backend = "poetry.core.masonry.api"
